<resources>
    <string name="app_name">RestaurantManager</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="logintittle">Đăng <br /> nhập</string>

    <string name="choose_gender">Chọn giới tính</string>
    <string name="enter_userposition">Chức vụ:</string>
    <string name="choose_birthday">Chọn ngày sinh</string>
    <string name="function">Quản lý</string>
    <string name="create_acc">Tạo <br /> tài khoản</string>
    <string name="enter_fullname">Họ và tên</string>
    <string name="enter_username">Tên tài khoản</string>
    <string name="enter_email">Email</string>
    <string name="enter_phone">Số điện thoại</string>
    <string name="enter_password">Mật khẩu</string>
    <string name="btn_next">Tiếp theo</string>
    <string name="btn_complete">Hoàn thành</string>
    <string name="add_sucessful">Thêm thành công!</string>
    <string name="add_failed">Thêm thất bại!</string>
    <string name="edit_sucessful">Sửa thành công!</string>
    <string name="edit_failed">Lỗi khi sửa!</string>
    <string name="delete_sucessful">Xóa thành công!</string>
    <string name="delete_failed">Lỗi khi xóa!</string>
    <string name="not_empty">Không được để trống!</string>
    <string name="opentoggle">Mở</string>
    <string name="closetoggle">Đóng</string>
    <string name="tablename">Tên bàn ăn</string>
    <string name="choseimg">Chọn hình</string>
    <string name="fogotPass">Quên Mật Khẩu</string>
    <string name="savelog">Lưu đăng nhập</string>
    <string name="reset_password">Reset Password</string>
    <string name="re_enter_password">Nhập lại mật khẩu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zone_and_table">Khu vực và bàn ăn</string>
    <string name="menu_list">Thực đơn</string>
    <string name="sale">Mã giảm giá</string>
    <string name="category_title">Thực đơn các loại</string>
    <string name="food_title">Món ăn và đồ uống</string>
    <string name="zone_title">Danh sách khu vực</string>
    <string name="table_title">Danh sách bàn ăn</string>
    <string name="account_title">Danh sách tài khoản</string>
    <string name="man">Nam</string>
    <string name="woman">Nữ</string>
    <string name="difference">Khác</string>

    <string name="Manager">Quản lý</string>
    <string name="Staff">Nhân viên</string>
    <string name="food_exist">Còn món</string>
    <string name="food_not_exsit">Hết món</string>
    <string name="unitMoney">VND</string>

    <string name="editAcc">Sửa tài khoản</string>
    <string name="editFood">Sửa món ăn</string>
    <string name="editCategoryHint">Loại món</string>
    <string name="editFoodHint">Nhập tên món</string>
    <string name="editTableHint">Nhập tên bàn</string>
    <string name="editZoneHint">Nhập tên khu vực</string>
    <string name="editSaleHint">Nhập tên mã giảm giá</string>

    <string name="addFood">Thêm món ăn</string>
    <string name="addTable">Thêm bàn ăn</string>
    <string name="addMenu">Thêm thực đơn</string>
    <string name="addZone">Thêm khu vực</string>
    <string name="addAccount">Thêm tài khoản</string>
    <string name="addSale">Thêm mã giảm giá</string>
    <string name="addCategory">Thêm loại</string>

    <string name="addmenu">Thêm <br /> thực đơn</string>
    <string name="addcategory">Thêm <br /> loại</string>
    <string name="addfood">Thêm <br /> món ăn</string>
    <string name="addtable">Thêm <br /> bàn ăn</string>
    <string name="addzone">Thêm <br /> khu vực</string>
    <string name="addsale">Thêm <br /> mã giảm giá</string>

    <string name="editcategory">Sửa <br /> loại</string>
    <string name="editfood">Sửa món ăn</string>
    <string name="edittable">Sửa bàn ăn</string>
    <string name="editzone">Sửa khu vực</string>
    <string name="editsale">Sửa <br /> mã giảm giá</string>

    <string name="foodstatus">Trạng thái: </string>
    <string name="foodname">Tên món</string>
    <string name="foodprice">Giá tiền</string>
    <string name="foodcategory">Loại món</string>
    <string name="foodsale">Mã giảm giá</string>

    <string name="foodcategory_exist">Loại món đã tồn tại</string>
    <string name="zone_exist">Khu vực đã tồn tại!</string>
    <string name="sale_title">Mã giảm giá</string>
    <string name="editValueSaleHint">Nhập giá trị giảm(đơn vị %)</string>
    <string name="sale_exist">Mã giảm giá tồn tại!</string>
    <string name="list_table_title">Danh sách bàn ăn</string>
    <string name="title_activity_add_table">AddTableActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="choose_sale">Chọn mã giảm giá</string>
    <string name="foodname_exist">Món đã tồn tại</string>
    <string name="foodprice_error">Giá tiền không hợp lệ</string>
    <string name="no_sale">Giá gốc</string>
    <string name="rePass_fail">Mật khẩu nhập lại không đúng!</string>
    <string name="enterPass_failMatch">Mật khẩu ít nhất 6 ký tự và không có khoảng trắng!</string>
    <string name="enterPhone_errLength">Số điện thoại không hợp lệ!(Nhập đủ 10 số)</string>
    <string name="enterEmail_failMatch">Email không hợp lệ!</string>
    <string name="acc_exist">Tài khoản đã tồn tại!</string>
    <string name="not_space">Không được cách chữ!</string>
    <string name="enterAcc_errLength">Phải nhỏ hơn 50 ký tự!</string>
    <string name="choose_permission">Hãy chọn quyền!</string>
    <string name="let_choose_gender">Hãy chọn giới tính!</string>
    <string name="not_enough_old">Bạn không đủ tuổi đăng ký!</string>
    <string name="FullName">Họ và tên</string>
    <string name="introduce">Giới thiệu</string>
    <string name="posUser">Chức Vụ</string>
    <string name="birthday">Ngày sinh</string>
    <string name="status">Trạng thái</string>
    <string name="infoContact">Thông tin liên hệ</string>
    <string name="table_exist">Bàn đã tồn tại!</string>
    <string name="check">Thanh toán</string>
    <string name="MoneySum">Tổng tiền</string>
    <string name="input_amount">Nhập số lượng</string>
    <string name="ok">Đồng ý</string>
    <string name="title_activity_add_amount">Nhập số lượng</string>
    <string name="nofood">Món đã hết, không thể thêm</string>
    <string name="noAccount">Chưa có tài khoản?</string>
    <string name="list_bill">DANH SÁCH HÓA ĐƠN</string>
    <string name="today">Ngày: Hôm nay</string>
    <string name="idBill">"Mã đơn: "</string>
    <string name="valuesale_error">Giá trị giảm không hợp lệ!</string>
    <string name="sub_sucessful">Bớt thành công</string>
    <string name="sub_failed">Bớt thất bại</string>
    <string name="choose_date_range">Chọn khoảng thời gian</string>
    <string name="input_note">Nhập ghi chú</string>
    <string name="title_activity_display_note">NOTE</string>
    <string name="payment_note">Ghi chú</string>
    <string name="top_food">MÓN ĂN ƯA CHUỘNG</string>
    <string name="turnover">TỔNG HỢP DOANH THU</string>
    <string name="title_mydatepicker">Chọn thời gian</string>
    <string name="choose_date">Chọn ngày</string>
    <string name="choose_date_begin">Chọn ngày bắt đầu</string>
    <string name="choose_date_end">Chọn ngày kết thúc</string>
    <string name="turnover_title">BÁO CÁO THU CHI</string>
    <string name="totalbillperday">Tổng số hóa đơn mỗi ngày </string>
    <string name="totalturnoverperday">Tổng doanh thu mỗi ngày</string>
    <string name="totalbill">Tổng số hóa đơn: </string>
    <string name="totalturnover">Tổng doanh thu: </string>
    <string name="list_topfood">DANH SÁCH MÓN ĂN ƯA CHUỘNG</string>
    <string name="orded">"Số bill order: "</string>
    <string name="respone_list">PHẢN HỒI TỪ KHÁCH HÀNG</string>
    <string name="findDate">Tìm theo ngày</string>
</resources>